# myrmidon

./: .env-template  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  __main__.py  bot.py  bot.ts  config.ts  constants.js  deno.jsonc  dotw.js  friday.js  friday.ts  import_map.json  index.js  license.txt  main.ts  music.ts  package-lock.json  package.json  pyproject.toml  readme.md  schedule.ts  threads.js  webhook.ts
.github/workflows/: dotw.yaml  friday.yaml
bot/: __init__.py  __main__.py  archive.py  ballpit.py
events/: __init__.py  __main__.py  friday.py  music.py
